--- a/Views/Reservation/View.html
+++ b/Views/Reservation/View.html
@@ -54,6 +54,18 @@
                     <th>Bis</th>
                     <td>{{EndTime}}</td>
                 </tr>
+                <tr>
+                    <th>Bemerkung</th>
+                    <td>{{Remarks}}</td>
+                </tr>
+                <tr>
+                    <th>Private Key</th>
+                    <td>{{PrivateKey}}</td>
+                </tr>
+                <tr>
+                    <th>Public Key</th>
+                    <td>{{PublicKey}}</td>
+                </tr>
             </tbody>
         </table>
 
