--- a/Views/Home/Index.html
+++ b/Views/Home/Index.html
@@ -38,10 +38,10 @@
         <form method="get" action="/Reservation/Access" class="mb-4">
             <div class="row">
                 <div class="col-md-9">
-                    <input type="text" id="key" name="key" class="form-control" placeholder="Geben Sie Ihren Schlüssel ein" required>
+                    <input type="text" id="key" name="key" class="form-control" placeholder="Geben Sie Ihren Private Key ein" required>
                 </div>
                 <div class="col-md-3 text-end">
-                    <button type="submit" class="btn btn-primary w-100">Zugreifen</button>
+                    <button type="submit" class="btn btn-primary w-100">Ansehen</button>
                 </div>
             </div>
         </form>
