--- a/Views/Home/Index.html
+++ b/Views/Home/Index.html
@@ -21,11 +21,11 @@
                         <a class="nav-link" href="/">Startseite</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/Reservation/Create">Neue Reservation</a>
+                        <a class="nav-link" href="/Reservation/Create">Neue Reservationen erfassen</a>
                     </li>
                 </ul>
             </div>
-            <a href="/Reservation/Create" class="btn btn-success">+ Neue Reservation</a>
+            <a href="/Reservation/Create" class="btn btn-success">+ Reservationen erfassen</a>
         </div>
     </nav>
 
