privat_public_key_logic_change

--- a/Views/Home/Index.html
+++ b/Views/Home/Index.html
@@ -21,11 +21,11 @@
                         <a class="nav-link" href="/">Startseite</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/Reservation/Create">Neue Reservationen erfassen</a>
+                        <a class="nav-link" href="/Reservation/Create">Neue Reservation erfassen</a>
                     </li>
                 </ul>
             </div>
-            <a href="/Reservation/Create" class="btn btn-success">+ Reservationen erfassen</a>
+            <a href="/Reservation/Create" class="btn btn-success">+ Reservation erfassen</a>
         </div>
     </nav>
 
@@ -38,10 +38,10 @@
         <form method="get" action="/Reservation/Access" class="mb-4">
             <div class="row">
                 <div class="col-md-9">
-                    <input type="text" id="key" name="key" class="form-control" placeholder="Geben Sie Ihren Private Key ein" required>
+                    <input type="text" id="key" name="key" class="form-control" placeholder="Geben Sie Ihren Private oder Public Key ein" required>
                 </div>
                 <div class="col-md-3 text-end">
-                    <button type="submit" class="btn btn-primary w-100">Ansehen</button>
+                    <button type="submit" class="btn btn-primary w-100">Weiter</button>
                 </div>
             </div>
         </form>
