change_text_on_validate

--- a/Views/Reservation/Create.html
+++ b/Views/Reservation/Create.html
@@ -70,15 +70,13 @@
                 <label for="remarks" class="form-label text-light">Bemerkung:</label>
                 <textarea id="remarks" name="Remarks" class="form-control" rows="3" 
                     minlength="10" maxlength="200" 
-                    required></textarea>
-                <small class="form-text text-muted">Bitte geben Sie eine Bemerkung mit 10 bis 200 alphanumerischen Zeichen ein.</small>
+                    required placeholder="Bitte geben Sie eine Bemerkung mit 10 bis 200 alphanumerischen Zeichen ein."></textarea>
             </div>
 
             <!-- Teilnehmer -->
             <div class="mb-3">
                 <label for="participants" class="form-label text-light">Teilnehmer:</label>
                 <textarea id="participants" name="Participants" class="form-control" rows="3" placeholder="Teilnehmer nur mit Buchstaben [A-Z][Aa-Zz] und Trennzeichen: Komma" required></textarea>
-                <small class="form-text text-muted">Bitte trennen Sie Teilnehmer durch Kommas. Nur Buchstaben sind erlaubt.</small>
             </div>
 
             <!-- Speichern Button -->
