--- a/Views/Home/Index.html
+++ b/Views/Home/Index.html
@@ -6,6 +6,7 @@
     <title>Raumreservierung - Startseite</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/styles.css?v=1.0" rel="stylesheet">
 </head>
 <body data-bs-theme="dark">
     <!-- Navigation -->
@@ -33,6 +34,7 @@
     <div class="container my-5">
         <h1 class="text-center text-light">Willkommen zur Raumreservierung</h1>
         <p class="text-light text-center">Verwalten Sie Ihre Termine oder erstellen Sie eine neue Reservation.</p>
+        <div class="placeholder_home"></div>
 
         <!-- Schlüsselzugriff -->
         <form method="get" action="/Reservation/Access" class="mb-4">
