--- a/Views/Reservation/Create.html
+++ b/Views/Reservation/Create.html
@@ -22,7 +22,7 @@
                         <a class="nav-link" href="/">Startseite</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/Reservation/Create">Neue Reservation</a>
+                        <a class="nav-link active" href="/Reservation/Create">Neue Reservation erfassen</a>
                     </li>
                 </ul>
             </div>
@@ -31,7 +31,7 @@
 
     <!-- Hauptinhalt -->
     <div class="container my-5">
-        <h1 class="text-light">Neue Reservation erstellen</h1>
+        <h1 class="text-light">Neue Reservation erfassen</h1>
 
         <!-- Fehlermeldung -->
         <div id="errorMessage" class="alert alert-danger d-none"></div>
