--- a/Views/Reservation/Edit.html
+++ b/Views/Reservation/Edit.html
@@ -22,7 +22,7 @@
                         <a class="nav-link" href="/">Startseite</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/Reservation/Create">Neue Reservation</a>
+                        <a class="nav-link" href="/Reservation/Create">Neue Reservation erfassen</a>
                     </li>
                 </ul>
             </div>
