--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -1,4 +1,9 @@
 .placeholder_home {
     display: block;
     height: 70px;
-  }
+}
+
+.navbar.navbar-expand-lg.navbar-dark.bg-dark {
+  padding: 20px;
+  border-bottom: 1px solid #495057;
+}
