--- a/Views/Home/Index.html
+++ b/Views/Home/Index.html
@@ -6,7 +6,7 @@
     <title>Raumreservierung - Startseite</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/styles.css?v=1.0" rel="stylesheet">
+    <link href="/css/styles.css" rel="stylesheet">
 </head>
 <body data-bs-theme="dark">
     <!-- Navigation -->
@@ -32,6 +32,7 @@
 
     <!-- Hauptinhalt -->
     <div class="container my-5">
+        <br /><br />
         <h1 class="text-center text-light">Willkommen zur Raumreservierung</h1>
         <p class="text-light text-center">Verwalten Sie Ihre Termine oder erstellen Sie eine neue Reservation.</p>
         <div class="placeholder_home"></div>
