--- a/Views/Reservation/Create.html
+++ b/Views/Reservation/Create.html
@@ -7,6 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="/css/styles.css" rel="stylesheet">
 </head>
 <body data-bs-theme="dark">
     <!-- Navigation -->
@@ -26,13 +27,14 @@
                     </li>
                 </ul>
             </div>
+            <a href="/Reservation/Create" class="btn btn-success">+ Reservation erfassen</a>
         </div>
     </nav>
 
     <!-- Hauptinhalt -->
     <div class="container my-5">
         <h1 class="text-light">Neue Reservation erfassen</h1>
-
+        <br /><br />
         <!-- Fehlermeldung -->
         <div id="errorMessage" class="alert alert-danger d-none"></div>
 
@@ -44,18 +46,18 @@
                     <input type="date" id="date" name="Date" class="form-control" required>
                 </div>
                 <div class="col-md-4">
-                    <label for="startTime" class="form-label text-light">Von:</label>
+                    <label for="startTime" class="form-label text-light">Zeit von:</label>
                     <input type="time" id="startTime" name="StartTime" class="form-control" required>
                 </div>
                 <div class="col-md-4">
-                    <label for="endTime" class="form-label text-light">Bis:</label>
+                    <label for="endTime" class="form-label text-light">Zeit bis:</label>
                     <input type="time" id="endTime" name="EndTime" class="form-control" required>
                 </div>
             </div>
 
             <!-- Zimmer -->
             <div class="mb-3">
-                <label for="roomNumber" class="form-label text-light">Zimmer:</label>
+                <label for="roomNumber" class="form-label text-light">Zimmernummer:</label>
                 <select id="roomNumber" name="RoomNumber" class="form-select" required>
                     <option value="101">101</option>
                     <option value="102">102</option>
