--- a/Views/Reservation/InvalidKey.html
+++ b/Views/Reservation/InvalidKey.html
@@ -6,6 +6,7 @@
     <title>Ungültiger Schlüssel</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/styles.css" rel="stylesheet">
 </head>
 <body data-bs-theme="dark">
     <!-- Navigation -->
@@ -35,6 +36,7 @@
         <p class="text-light text-center">
             Der eingegebene Schlüssel ist ungültig oder gehört zu keiner bestehenden Reservation.
         </p>
+        <br /><br />
         <div class="text-center mt-4">
             <a href="/" class="btn btn-primary">Zurück zur Startseite</a>
         </div>
